--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@charlespalmerbf/react-native-leaflet-js": "^1.3.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -29,18 +30,20 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
+    "papaparse": "^5.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-leaflet-view": "^1.1.2",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^1.8.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17",
-    "papaparse": "^5.4.1",
-    "react-native-maps": "^1.8.0"
+    "react-native-webview": "^13.15.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
